# polez

./: .gitignore  .ralphrc  .release-it.json  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.agents/skills/organize-commits/: SKILL.md
.cargo/: config.toml
.githooks/: commit-msg
.github/workflows/: ci.yml  release.yml
.ralph/: .circuit_breaker_history  .circuit_breaker_state  .loop_start_sha  .ralph_session  .ralph_session_history  AGENT.md  PROMPT.md  fix_plan.md  progress.json  status.json
docs/: algorithms.md  configuration.md  troubleshooting.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_format_detection.rs  fuzz_load_audio.rs
gui/: build.sh  index.html  package-lock.json  package.json  safelist.txt  swatches.html  vite.config.ts
gui/src/: App.tsx  index.css  main.tsx  theme.ts
gui/src/api/: client.ts
gui/src/components/: AudioPlayer.tsx  BatchPanel.tsx  BitPlaneViewer.tsx  Button.tsx  Card.tsx  CleanPanel.tsx  ComparisonTimeline.tsx  DetectionPanel.tsx  ErrorBoundary.tsx  FileHeader.tsx  MetadataViewer.tsx  Spectrogram.tsx  TransportBar.tsx  Waveform.tsx
gui/src/hooks/: useColorblind.tsx  useKeyboardShortcuts.ts
src/: error.rs  lib.rs  main.rs
src/audio/: buffer.rs  io.rs  mod.rs
src/cli/: flags.rs  mod.rs
src/config/: defaults.rs  manager.rs  mod.rs  types.rs
src/detection/: metadata_scan.rs  mod.rs  perceptual_hash.rs  polez.rs  statistical.rs  watermark.rs
src/gui/: mod.rs  routes.rs  types.rs
src/inspect/: mod.rs
src/sanitization/: fingerprint.rs  metadata.rs  mod.rs  pipeline.rs  psychoacoustic.rs  spectral.rs  stealth.rs
src/sanitization/dsp/: biquad.rs  filtfilt.rs  hilbert.rs  mod.rs  resample.rs  simd.rs  stats.rs  stft.rs
src/ui/: banners.rs  console.rs  mod.rs  progress.rs
src/verification/: mod.rs
tests/: cli.rs  generate_fixture.rs
