[package]
name = "polez"
version = "2.1.0"
edition = "2021"
description = "Polez - Audio forensics and sanitization engine"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "color", "wrap_help"] }

# Audio metadata
lofty = "0.21"

# Audio I/O
hound = "3.5"
symphonia = { version = "0.5", features = ["mp3", "wav", "pcm", "isomp4", "aac", "flac"] }
mp3lame-encoder = "0.2"
flacenc = { version = "0.5", default-features = false }
vorbis_rs = "0.5"

# DSP / FFT
rustfft = "6"
realfft = "3"
ndarray = "0.16"

# Resampling
rubato = "0.15"

# Numeric
num-complex = "0.4"
rand = "0.8"
rand_distr = "0.4"

# Parallelism
rayon = "1.10"

# Config
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
dirs = "5"

# UI
indicatif = "0.17"
console = "0.15"
colored = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Hashing
sha2 = "0.10"

# Security
zeroize = "1"

# Serialization
serde_json = "1"

# Misc
walkdir = "2"

# GUI (optional)
axum = { version = "0.8", features = ["multipart"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower-http = { version = "0.6", features = ["cors", "fs"], optional = true }
rust-embed = { version = "8", optional = true }
open = { version = "5", optional = true }
mime_guess = { version = "2", optional = true }
tempfile = { version = "3", optional = true }

[features]
default = ["gui"]
gui = ["dep:axum", "dep:tokio", "dep:tower-http", "dep:rust-embed", "dep:open", "dep:mime_guess", "dep:tempfile"]

[dev-dependencies]
assert_cmd = "2"
http-body-util = "0.1"
predicates = "3"
proptest = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[lib]
name = "polez"
path = "src/lib.rs"

[[bin]]
name = "polez"
path = "src/main.rs"
