[package]
name = "polez-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3"

[dependencies.polez]
path = ".."
default-features = false

[[bin]]
name = "fuzz_load_audio"
path = "fuzz_targets/fuzz_load_audio.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_format_detection"
path = "fuzz_targets/fuzz_format_detection.rs"
test = false
doc = false
bench = false
